# loomwright

./: .env.example  .gitignore  .vercelignore  LICENSE  LIVE_BAND_GUIDE.md  README.md  agent_config.example.yaml  band_agents.py  cli.py  demo.py  fixtures.py  loopspec.py  models.py  pyproject.toml  qa.py  run_on_repo.py  tasks.py  vercel.json
api/: run.py
docs/: build_data.py  data.json  index.html  index.template.html
public/: data.json  index.html  realrun.json
shared/: band_harness.py
shared/examples/cart_demo/.fix/: cart.py
shared/examples/cart_demo/src/: cart.py
shared/examples/cart_demo/tests/: test_cart.py
slides/: README.md  index.html
specialists/: architect.py  author.py  critic.py  fixauthor.py  qaagent.py  reviewer.py  rootcause.py  runner.py  triage.py
web/: index.html  index.template.html
