[project]
name = "loomwright"
version = "0.1.0"
description = "A Band room that engineers a verification loop per task, then runs it. Loop engineering, run by a band of agents — Track 2, Band of Agents Hackathon."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
live = [
    "band-sdk[pydantic-ai,langgraph,codex]",
    "pydantic-ai>=0.0.14",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
]

[tool.loomwright]
offline-demo = "python demo.py"
live-room = "python band_agents.py"
